# CFood

./: CMakeLists.txt  app.h  cooking_service_controller.c  cooking_service_controller.h  ingredient_service_controller.c  ingredient_service_controller.h  input.c  input.h  main.c  recipe_service_controller.c  recipe_service_controller.h  recommendation_service_controller.c  recommendation_service_controller.h
CFood_lib/: CMakeLists.txt
cooking/: CMakeLists.txt  cooking_service.c  cooking_service.h
glade/: #window_main.glade#  window_main.glade
ingredient/: CMakeLists.txt  ingredient.c  ingredient.h  ingredient_service.c  ingredient_service.h
lib/: CMakeLists.txt
lib/array/: CMakeLists.txt  array.c  array.h
lib/ingredient/: CMakeLists.txt  ingredient.h
main/: CMakeLists.txt  main.c
recipe/: CMakeLists.txt  recipe.c  recipe.h  recipe_service.c  recipe_service.h
recommendation/: CMakeLists.txt  recommendation_service.c  recommendation_service.h
test/: CMakeLists.txt  acceptance_test.c  array_test.c  igredient_test.c  ingredient_test.c
test/ingredient_test_suite/: CMakeLists.txt
